--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,10 @@
 #!/usr/bin/make -f
 
 # NB! Local CDBS tweaks in use. More info in README.cdbs-tweaks
+ifneq (,$(DEB_MAINTAINER_MODE))
+  # Enable stuff not policy compliant (eg. unsuitable for build daemons)
+  DEB_AUTO_UPDATE_DEBIAN_CONTROL = yes
+endif
 #DEB_AUTO_UPDATE_ACLOCAL = 1.10
 #DEB_AUTO_UPDATE_AUTOMAKE = 1.10
 #DEB_AUTO_UPDATE_AUTOHEADER = 2.50
