Update cdbs snippets.
+ Move dependency cleanup to new local snippet package-relations.mk.
+ Update copyright-check output to more closely match proposed new
  copyright file format.
+ Several minor improvements to upstream-tarball.mk.
+ Compact simple licenses (those without ' or later') in
  copyright-check.mk
+ Fix use underscore (not dash) in internal variable
+ Ignore only debian changelog and copyright-related files by
  default in copyright-check.mk
+ Correct and update copyright hints of the snippets themselves
+ Update README.cdbs-tweaks.

--- a/debian/rules
+++ b/debian/rules
@@ -141,5 +141,5 @@ endif
 # Needed for our packaging routines
 CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), d-shlibs (>> 0.19)
 
-# Fix double cdbs build-dependencies
-CDBS_BUILD_DEPENDS := $(shell echo '$(CDBS_BUILD_DEPENDS)' | sed -e '/\bcdbs (>= 0.4.39)/ s/ *,* *\bcdbs (>= \(0.4.23-1.1\|0.4.27\)) *,* */, /g' -e 's/^ *, *//' -e 's/ *, *$$//')
+# Resolve, cleanup and apply CDBS-declared dependencies
+include debian/cdbs/1/rules/package-relations.mk
