--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,7 @@
 # NB! Local CDBS tweaks in use. More info in README.cdbs-tweaks
 ifneq (,$(DEB_MAINTAINER_MODE))
   # Enable stuff not policy compliant (eg. unsuitable for build daemons)
+  DEB_COPYRIGHT_CHECK_STRICT = yes
   DEB_AUTO_UPDATE_DEBIAN_CONTROL = yes
 endif
 #DEB_AUTO_UPDATE_ACLOCAL = 1.10
