--- a/debian/rules
+++ b/debian/rules
@@ -64,7 +64,7 @@ pamfile = netatalk.pam-ssl
 else
 DEB_CONFIGURE_EXTRA_FLAGS += --with-libgcrypt-dir		\
 	--without-openssl-dir					\
-	--with-cracklib=/var/cache/cracklib/cracklib_dict	\
+	--with-cracklib=/var/cache/cracklib/cracklib_dict
 DEB_DH_GENCONTROL_ARGS := -- -Vssl:Recommends=", cracklib-runtime, libpam-cracklib"
 uamlist = uams_dhx2.so,uams_clrtxt.so
 pamfile = netatalk.pam-ssl
