--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Package: netatalk
 Section: net
 Architecture: any
 Depends: netbase, libpam-modules, ${shlibs:Depends}, ${perl:Depends}, ${misc:Depends}
-Recommends: lsof, rc, db4.2-util, procps, ${ssl:Recommends}
+Recommends: lsof, rc, db4.2-util, procps, cracklib-runtime, libpam-cracklib
 Suggests: tetex-bin, quota, timeout
 Description: AppleTalk user binaries
  Netatalk is an implementation of the AppleTalk Protocol Suite for
