--- a/debian/control.in
+++ b/debian/control.in
@@ -14,8 +14,8 @@ Package: netatalk
 Section: net
 Architecture: any
 Depends: netbase, libpam-modules, ${shlibs:Depends}, ${perl:Depends}, ${misc:Depends}
-Recommends: lsof, rc, db4.7-util, procps, cracklib-runtime, libpam-cracklib
-Suggests: texlive-base-bin, quota, timeout, db4.2-util
+Recommends: lsof, rc, db4.7-util, procps, cracklib-runtime
+Suggests: texlive-base-bin, quota, timeout, db4.2-util, libpam-cracklib
 Description: AppleTalk user binaries
  Netatalk is an implementation of the AppleTalk Protocol Suite for
  BSD-derived systems.  The current release contains support for
