Disable autoconf regeneration again (didn't work, patches now tightened instead).

--- a/debian/rules
+++ b/debian/rules
@@ -27,7 +27,7 @@ endif
 #DEB_AUTO_UPDATE_ACLOCAL = 1.10
 #DEB_AUTO_UPDATE_AUTOMAKE = 1.10
 #DEB_AUTO_UPDATE_AUTOHEADER = 2.50
-DEB_AUTO_UPDATE_AUTOCONF = 2.61
+#DEB_AUTO_UPDATE_AUTOCONF = 2.61
 #DEB_AUTO_UPDATE_LIBTOOL = post
 include debian/cdbs/1/rules/upstream-tarball.mk
 include /usr/share/cdbs/1/rules/debhelper.mk
