Declare binary dependencies (not only build-dependencies) in debian/rules.

--- a/debian/control.in
+++ b/debian/control.in
@@ -12,9 +12,9 @@ Homepage: http://netatalk.sourceforge.net/
 Package: netatalk
 Section: net
 Architecture: any
-Depends: netbase, libpam-modules, ${shlibs:Depends}, ${perl:Depends}, ${misc:Depends}
-Recommends: lsof, rc, db4.7-util, procps, cracklib-runtime
-Suggests: texlive-base-bin, quota, timeout, db4.2-util, libpam-cracklib
+Depends: ${shlibs:Depends}, ${perl:Depends}, ${misc:Depends}, ${cdbs:Depends}
+Recommends: ${cdbs:Recommends}
+Suggests: ${cdbs:Suggests}
 Description: AppleTalk user binaries
  Netatalk is an implementation of the AppleTalk Protocol Suite for
  BSD-derived systems.  The current release contains support for
