--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 # -*- mode: makefile; coding: utf-8 -*-
-# Copyright © 2003-2005 Sebastian Rittau <srittau@debian.org>
-# Copyright © 2004, 2006-2009 Jonas Smedegaard <dr@jones.dk>
+# Copyright 2003-2005, Sebastian Rittau <srittau@debian.org>
+# Copyright 2004, 2006-2010, Jonas Smedegaard <dr@jones.dk>
 # Description: Main Debian packaging script for Netatalk
 #
 # This program is free software; you can redistribute it and/or
