--- a/debian/rules
+++ b/debian/rules
@@ -27,10 +27,6 @@ DEB_UPSTREAM_URL = http://downloads.sourceforge.net/netatalk
 DEB_UPSTREAM_TARBALL_BASENAME_MANGLE = s/~(alpha|beta|rc)/-\1/
 DEB_UPSTREAM_TARBALL_MD5 = 8bdac54ad3e8de3fdbb2616bc773c2f7
 
-db_stable = 4.2
-db_testing = 4.7
-db_current = 4.8
-
 # Override defaults for old-style update-rc.d
 #  * Start and stop at priority 50 (FIXME: explain reasoning)
 #  * Stop only in runlevel 1 (let system kill it in runlelels 0 and 6)
@@ -137,7 +133,7 @@ get-orig-vcs: get-orig-source
 	rm -rf "$(DEB_UPSTREAM_WORKDIR)/vcstemp"
 
 # Needed for by upstream build process
-CDBS_BUILD_DEPENDS += , libdb$(db_current)-dev, libwrap0-dev, libpam0g-dev, libcups2-dev, libkrb5-dev, libltdl3-dev
+CDBS_BUILD_DEPENDS += , libdb-dev, libwrap0-dev, libpam0g-dev, libcups2-dev, libkrb5-dev, libltdl3-dev
 CDBS_BUILD_DEPENDS += , libgcrypt11-dev | libgcrypt-dev, libcrack2-dev | cracklib-dev
 ifneq (,$(findstring zeroconf,$(DEB_BUILD_OPTIONS)))
 CDBS_BUILD_DEPENDS += , libavahi-client-dev (>= 0.6)
@@ -154,13 +150,11 @@ CDBS_BUILD_DEPENDS += , d-shlibs (>> 0.19), hardening-includes
 #  * libpam-modules, libpam-cracklib and cracklib-runtime needed by daemons afpd and papd
 #  * lsof and procps needed by script macusers
 #  * rc needed by script acleandir.rc
-#  * db4.8-util needed by script cnid_maint
+#  * db-util needed by script cnid_maint
 #  * texlive-base-bin (dvips) and groff (roff2ps) needed by script etc2ps
 #  * quota needed by daemon afpd
 #  * db4.2-util needed by example script netatalk_update.sh for upgrades
 #    from 2.0.4~beta2-4 and earlier: can be dropped after Squeeze+1
-#  * db4.7-util needed by example script netatalk_update.sh for upgrades
-#    from 2.0.5-1 and earlier: can be dropped when 2.0.5-2 is in testing
 CDBS_DEPENDS = netbase, libpam-modules
-CDBS_RECOMMENDS = lsof, rc, db$(db_current)-util, procps, cracklib-runtime, libpam-cracklib
-CDBS_SUGGESTS = texlive-base-bin, groff, quota, $(db_stable:%=db%-util), $(db_testing:%=db%-util)
+CDBS_RECOMMENDS = lsof, rc, db-util, procps, cracklib-runtime, libpam-cracklib
+CDBS_SUGGESTS = texlive-base-bin, groff, quota, db4.2-util
