--- a/debian/control.in
+++ b/debian/control.in
@@ -4,9 +4,9 @@ Priority: extra
 Maintainer: Jonas Smedegaard <dr@jones.dk>
 Build-Depends: @cdbs@
 Build-Conflicts: libavahi-compat-libdnssd-dev
-Vcs-Git: git://git.debian.org/git/collab-maint/netatalk.git
-Vcs-Browser: http://git.debian.org/?p=collab-maint/netatalk.git;a=summary
-Standards-Version: 3.9.0
+Vcs-Git: git://git.debian.org/git/collab-maint/netatalk
+Vcs-Browser: http://git.debian.org/?p=collab-maint/netatalk.git
+Standards-Version: 3.9.2
 Homepage: http://netatalk.sourceforge.net/
 
 Package: netatalk
