--- a/debian/rules
+++ b/debian/rules
@@ -29,7 +29,7 @@ DEB_UPSTREAM_TARBALL_MD5 = b048fa68466fd6a9769235b2fadee0a7
 
 # Override defaults for old-style update-rc.d
 #  * Start and stop at priority 50 (FIXME: explain reasoning)
-#  * Stop only in runlevel 1 (let system kill it in runlelels 0 and 6)
+#  * Stop only in runlevel 1 (let system kill it in runlevels 0 and 6)
 DEB_UPDATE_RCD_PARAMS = start 50 2 3 4 5 . stop 50 1 .
 
 # Tighten security - more info at http://wiki.debian.org/Hardening
