--- a/debian/rules
+++ b/debian/rules
@@ -123,7 +123,7 @@ get-orig-vcs: get-orig-source
 # Needed for by upstream build process
 CDBS_BUILD_DEPENDS += , libdb-dev, libwrap0-dev, libpam0g-dev, libcups2-dev, libkrb5-dev, libltdl3-dev
 CDBS_BUILD_DEPENDS += , libgcrypt11-dev, libcrack2-dev
-CDBS_BUILD_DEPENDS += , libavahi-client-dev
+CDBS_BUILD_DEPENDS += , libavahi-client-dev, libldap2-dev, libacl1-dev
 ifneq (,$(findstring openssl,$(DEB_BUILD_OPTIONS)))
 CDBS_BUILD_DEPENDS += , $(openssl_build_depends)
 endif
