--- a/debian/control
+++ b/debian/control
@@ -16,12 +16,14 @@ Build-Depends: autotools-dev,
  libgcrypt11-dev,
  libcrack2-dev,
  libavahi-client-dev,
+ libldap2-dev,
+ libacl1-dev,
  d-shlibs,
  hardening-includes
 Build-Conflicts: libavahi-compat-libdnssd-dev
 Vcs-Git: git://git.debian.org/git/collab-maint/netatalk
 Vcs-Browser: http://git.debian.org/?p=collab-maint/netatalk.git
-Standards-Version: 3.9.2
+Standards-Version: 3.9.3
 Homepage: http://netatalk.sourceforge.net/
 
 Package: netatalk
